# Remote_switch

./: .gitignore  .gitmodules  CMakeLists.txt  platformio.ini
src/: CMakeLists.txt  main.c
src/BSP/BSP_physical_connection/: Button_physical_connection.h
src/Core/Remote_switch/: Remote_switch.c  Remote_switch.h
src/Core/System_config/: System_lights.h
src/Core/TCP_client/: TCP_client.c  TCP_client.h
